force-app/main/default/objects/Campaign/fields/Approvedflag__c.field-meta.xml
<CustomField>
    <fullName>Approvedflag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval flag after campaign is approved</description>
    <label>Approved flag</label>
    <type>Checkbox</type>
</CustomField>