force-app/main/default/objects/Campaign/fields/ContainsChild__c.field-meta.xml
<CustomField>
    <fullName>ContainsChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContainsChild</label>
    <type>Checkbox</type>
</CustomField>