force-app/main/default/objects/Campaign/fields/Filter_Out_Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Filter_Out_Do_Not_Contact__c</fullName>
    <label>Filter Out Do Not Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>