force-app/main/default/objects/Campaign/fields/FullDealExpectedRevenueOpportunities__c.field-meta.xml
<CustomField>
    <fullName>FullDealExpectedRevenueOpportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Full Deal Expected Revenue opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>