force-app/main/default/objects/Campaign/fields/FullDealExpectedRevenueWONOpty__c.field-meta.xml
<CustomField>
    <fullName>FullDealExpectedRevenueWONOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Full Deal Expected Revenue WON Opty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>