force-app/main/default/objects/Campaign/fields/HierarchyFullDealExpectedRevenueOpty__c.field-meta.xml
<CustomField>
    <fullName>HierarchyFullDealExpectedRevenueOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Full Deal Expected Revenue in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>