force-app/main/default/objects/Campaign/fields/HierarchyFullDealExpectedRevenueWONOpty__c.field-meta.xml
<CustomField>
    <fullName>HierarchyFullDealExpectedRevenueWONOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Full Deal WON Expected Revenue Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>