force-app/main/default/objects/Campaign/fields/HierarchyThisYearExpectedRevenueOpty__c.field-meta.xml
<CustomField>
    <fullName>HierarchyThisYearExpectedRevenueOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Year Expected Revenue in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>