force-app/main/default/objects/Campaign/fields/HierarchyThisYearExpectedRevenueWONOpty__c.field-meta.xml
<CustomField>
    <fullName>HierarchyThisYearExpectedRevenueWONOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Year WON Expected Revenue Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>