force-app/main/default/objects/Campaign/fields/ParentCampaignCodeName__c.field-meta.xml
<CustomField>
    <fullName>ParentCampaignCodeName__c</fullName>
    <formula>Parent.RTL_Campaign_Code_9_digits__c  + &quot; - &quot; + Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign CodeName</label>
    <type>Text</type>
</CustomField>