force-app/main/default/objects/Campaign/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>Unique ID to identify each product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>