force-app/main/default/objects/Campaign/fields/Rerun_Flow__c.field-meta.xml
<CustomField>
    <fullName>Rerun_Flow__c</fullName>
    <label>Rerun Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Campaign</fullName>
            </value>
            <value>
                <fullName>Expire Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>