force-app/main/default/objects/Campaign/fields/RTL_Call_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Call_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call End Date</label>
    <type>Date</type>
</CustomField>