force-app/main/default/objects/Campaign/fields/RTL_Campaign_Call_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Call_Group__c</fullName>
    <label>Campaign Call Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cust Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>