force-app/main/default/objects/Campaign/fields/RTL_Campaign_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Channel__c</fullName>
    <label>Campaign Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Outbound call</fullName>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>2 Outbound DealerDistributorNetwork</fullName>
                <label>Branch</label>
            </value>
            <value>
                <fullName>3 E-mail</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>4 Facebook</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>5 Mail</fullName>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>6 PrintMedia</fullName>
                <label>Print Media</label>
            </value>
            <value>
                <fullName>7 SMS</fullName>
                <label>SMS</label>
            </value>
            <value>
                <fullName>8 Outbound web</fullName>
                <label>MIB</label>
            </value>
            <value>
                <fullName>9 Subsidiary</fullName>
                <label>Subsidiary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>