force-app/main/default/objects/Campaign/fields/RTL_Campaign_Channel_Text__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Channel_Text__c</fullName>
    <formula>IF( INCLUDES(  RTL_Campaign_Channel__c  , &quot;1 Outbound call&quot;) , &quot;[x] Outbound  &quot; , null)  +
IF( INCLUDES( RTL_Campaign_Channel__c, &quot;2 Outbound DealerDistributorNetwork&quot;) , &quot;[x] Branch  &quot;, null)+
IF(INCLUDES( RTL_Campaign_Channel__c, &quot;3 E-mail&quot;) , &quot;[x] E-mail  &quot;, null)+
IF( INCLUDES(  RTL_Campaign_Channel__c  , &quot;4 Facebook&quot;) , &quot;[x] Facebook  &quot; , null)  +
IF( INCLUDES( RTL_Campaign_Channel__c, &quot;5 Mail&quot;) , &quot;[x] Direct Mail  &quot;, null)+
IF(INCLUDES( RTL_Campaign_Channel__c, &quot;6 PrintMedia&quot;) , &quot;[x] Print Media  &quot;, null)+
IF( INCLUDES(  RTL_Campaign_Channel__c  , &quot;7 SMS&quot;) , &quot;[x] SMS  &quot; , null)  +
IF( INCLUDES( RTL_Campaign_Channel__c, &quot;8 Outbound web&quot;) , &quot;[x] MIB  &quot;, null) +
IF( INCLUDES( RTL_Campaign_Channel__c, &quot;9 Subsidiary&quot;) , &quot;[x] Subsidiary  &quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Channel Text</label>
    <type>Text</type>
</CustomField>