force-app/main/default/objects/Campaign/fields/RTL_Campaign_Code_10_digits__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Code_10_digits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Campaign Code (10-digits)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>