force-app/main/default/objects/Campaign/fields/RTL_Campaign_Code_9_digits__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Code_9_digits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Code (9-digits)</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>