force-app/main/default/objects/Campaign/fields/RTL_Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>