force-app/main/default/objects/Campaign/fields/RTL_Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Objective__c</fullName>
    <label>Campaign Objective</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Digital Migration</fullName>
            </value>
            <value>
                <fullName>Drop-Lead</fullName>
            </value>
            <value>
                <fullName>Event Invitation</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Information Update</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>Reactive from Inactive</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Up-Selling</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>X-Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>