force-app/main/default/objects/Campaign/fields/RTL_Campaign_Objective_child__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Objective_child__c</fullName>
    <formula>TEXT( Parent.RTL_Campaign_Objective__c )</formula>
    <label>Campaign Objective</label>
    <type>Text</type>
</CustomField>