force-app/main/default/objects/Campaign/fields/RTL_Campaign_Stage__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Stage__c</fullName>
    <label>Campaign Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>