force-app/main/default/objects/Campaign/fields/RTL_Campaign_Sub_Type_child2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Sub_Type_child2__c</fullName>
    <label>Campaign Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 HasCampaignFulfillment</fullName>
                <label>HasCampaignFulfillment</label>
            </value>
            <value>
                <fullName>3 NoCampaignFulfillment</fullName>
                <label>NoCampaignFulfillment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>