force-app/main/default/objects/Campaign/fields/RTL_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Local Exclusive</fullName>
            </value>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>