force-app/main/default/objects/Campaign/fields/RTL_Campaign_Type_child__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Type_child__c</fullName>
    <formula>TEXT(Parent.RTL_Campaign_Type__c)</formula>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>