force-app/main/default/objects/Campaign/fields/RTL_CampaignLink2__c.field-meta.xml
<CustomField>
    <fullName>RTL_CampaignLink2__c</fullName>
    <formula>LEFT( $Api.Partner_Server_URL_140, FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)
 + &quot;ui/support/servicedesk/ServiceDeskPage#/&quot;
 + Id</formula>
    <label>CampaignLink2</label>
    <type>Text</type>
</CustomField>