force-app/main/default/objects/Campaign/fields/RTL_CampaignProduct__c.field-meta.xml
<CustomField>
    <fullName>RTL_CampaignProduct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Product</label>
    <type>TextArea</type>
</CustomField>