force-app/main/default/objects/Campaign/fields/RTL_CampaignRecordtype__c.field-meta.xml
<CustomField>
    <fullName>RTL_CampaignRecordtype__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Record Type</label>
    <type>Text</type>
</CustomField>