force-app/main/default/objects/Campaign/fields/RTL_Child_Campaign_Index__c.field-meta.xml
<CustomField>
    <fullName>RTL_Child_Campaign_Index__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Child Campaign Index</label>
    <length>1</length>
    <type>Text</type>
</CustomField>