force-app/main/default/objects/Campaign/fields/RTL_Child_Campaign_Product__c.field-meta.xml
<CustomField>
    <fullName>RTL_Child_Campaign_Product__c</fullName>
    <description>For user to select product to show on Commu Brief Email</description>
    <label>Child Campaign Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retail_Product_Group</valueSetName>
    </valueSet>
</CustomField>