force-app/main/default/objects/Campaign/fields/RTL_ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>RTL_ContactPerson__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>