force-app/main/default/objects/Campaign/fields/RTL_Eligible_Criteria__c.field-meta.xml
<CustomField>
    <fullName>RTL_Eligible_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>