force-app/main/default/objects/Campaign/fields/RTL_Fulfillment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Date</label>
    <type>Date</type>
</CustomField>