force-app/main/default/objects/Campaign/fields/RTL_Fulfillment_Detail__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>