force-app/main/default/objects/Campaign/fields/RTL_Fulfillment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_End_Date__c</fullName>
    <formula>If ( Text(RTL_Campaign_Sub_Type_child2__c) = &apos;2 HasCampaignFulfillment&apos;, EndDate + 90, 
null)</formula>
    <label>Fulfillment End Date</label>
    <type>Date</type>
</CustomField>