force-app/main/default/objects/Campaign/fields/RTL_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashback</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Point</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>