force-app/main/default/objects/Campaign/fields/RTL_LastSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>RTL_LastSubmittedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Submitted Date</label>
    <type>DateTime</type>
</CustomField>