force-app/main/default/objects/Campaign/fields/RTL_Objective__c.field-meta.xml
<CustomField>
    <fullName>RTL_Objective__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Objective</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>