force-app/main/default/objects/Campaign/fields/RTL_Priority__c.field-meta.xml
<CustomField>
    <fullName>RTL_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Campaign_Objective__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Highest</fullName>
            </value>
            <value>
                <fullName>2 High</fullName>
            </value>
            <value>
                <fullName>3 Medium</fullName>
            </value>
            <value>
                <fullName>4 Low</fullName>
            </value>
            <value>
                <fullName>5 Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>