force-app/main/default/objects/Campaign/fields/RTL_Remark__c.field-meta.xml
<CustomField>
    <fullName>RTL_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>