force-app/main/default/objects/Campaign/fields/RTL_Respond_Rate__c.field-meta.xml
<CustomField>
    <fullName>RTL_Respond_Rate__c</fullName>
    <description>Percentage of Response from Total members</description>
    <formula>If( RTL_Total_Members__c = 0, 0, NumberOfResponses /  RTL_Total_Members__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respond Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>