force-app/main/default/objects/Campaign/fields/RTL_Restricted_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Restricted_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Campaign</label>
    <type>Checkbox</type>
</CustomField>