force-app/main/default/objects/Campaign/fields/RTL_ShowonCampaignHistory_child__c.field-meta.xml
<CustomField>
    <fullName>RTL_ShowonCampaignHistory_child__c</fullName>
    <formula>RTL_ShowonCampaignHistory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show on Campaign History</label>
    <type>Checkbox</type>
</CustomField>