force-app/main/default/objects/Campaign/fields/RTL_SMS_Day_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_SMS_Day_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Day-1</label>
    <type>Date</type>
</CustomField>