force-app/main/default/objects/Campaign/fields/RTL_SMS_Day_1_Message__c.field-meta.xml
<CustomField>
    <fullName>RTL_SMS_Day_1_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Day-1 Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>