force-app/main/default/objects/Campaign/fields/RTL_SMS_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_SMS_Type__c</fullName>
    <label>SMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Way</fullName>
            </value>
            <value>
                <fullName>Regis-Branch</fullName>
            </value>
            <value>
                <fullName>Regis-OB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>