force-app/main/default/objects/Campaign/fields/RTL_SMS_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>RTL_SMS_Type_Text__c</fullName>
    <formula>TEXT(RTL_SMS_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Type Text</label>
    <type>Text</type>
</CustomField>