force-app/main/default/objects/Campaign/fields/RTL_Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>RTL_Target_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Criteria</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>