force-app/main/default/objects/Campaign/fields/RTL_Target_Customers__c.field-meta.xml
<CustomField>
    <fullName>RTL_Target_Customers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Customers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>