force-app/main/default/objects/Campaign/fields/RTL_Theme_Selling_Point__c.field-meta.xml
<CustomField>
    <fullName>RTL_Theme_Selling_Point__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Theme/Selling Point</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>