force-app/main/default/objects/Campaign/fields/RTL_TotalMembersinHierarchy__c.field-meta.xml
<CustomField>
    <fullName>RTL_TotalMembersinHierarchy__c</fullName>
    <formula>(HierarchyNumberOfLeads +  HierarchyNumberOfContacts) - HierarchyNumberOfConvertedLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Members in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>