force-app/main/default/objects/Campaign/fields/RTL_Tracking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Tracking_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Start Date</label>
    <type>Date</type>
</CustomField>