force-app/main/default/objects/Campaign/fields/RTL_Tracking_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Tracking_Type__c</fullName>
    <label>Tracking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC000</fullName>
            </value>
            <value>
                <fullName>AU000</fullName>
            </value>
            <value>
                <fullName>AX000</fullName>
            </value>
            <value>
                <fullName>AX001</fullName>
            </value>
            <value>
                <fullName>AX002</fullName>
            </value>
            <value>
                <fullName>BX000</fullName>
            </value>
            <value>
                <fullName>CX000</fullName>
            </value>
            <value>
                <fullName>CX001</fullName>
            </value>
            <value>
                <fullName>CX002</fullName>
            </value>
            <value>
                <fullName>CX003</fullName>
            </value>
            <value>
                <fullName>CX004</fullName>
            </value>
            <value>
                <fullName>DX000</fullName>
            </value>
            <value>
                <fullName>EU000</fullName>
            </value>
            <value>
                <fullName>EU001</fullName>
            </value>
            <value>
                <fullName>EU002</fullName>
            </value>
            <value>
                <fullName>EU003</fullName>
            </value>
            <value>
                <fullName>EU004</fullName>
            </value>
            <value>
                <fullName>EU005</fullName>
            </value>
            <value>
                <fullName>EU006</fullName>
            </value>
            <value>
                <fullName>EU007</fullName>
            </value>
            <value>
                <fullName>EU008</fullName>
            </value>
            <value>
                <fullName>EU009</fullName>
            </value>
            <value>
                <fullName>EU010</fullName>
            </value>
            <value>
                <fullName>EU011</fullName>
            </value>
            <value>
                <fullName>EU012</fullName>
            </value>
            <value>
                <fullName>EU013</fullName>
            </value>
            <value>
                <fullName>EU014</fullName>
            </value>
            <value>
                <fullName>EU015</fullName>
            </value>
            <value>
                <fullName>EU016</fullName>
            </value>
            <value>
                <fullName>EU017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>