force-app/main/default/objects/Campaign/fields/RTL_URL_Product_Brochure_News_URL_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_URL_Product_Brochure_News_URL_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL (Product Brochure/News) URL-2</label>
    <type>Url</type>
</CustomField>