force-app/main/default/objects/Campaign/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>RMC-Sales</fullName>
            </value>
            <value>
                <fullName>RMC-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>