force-app/main/default/objects/Campaign/fields/Stamp_Child_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Child_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stamp Child End Date</label>
    <type>Date</type>
</CustomField>