force-app/main/default/objects/Campaign/fields/ThisYearExpectedRevenueOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ThisYearExpectedRevenueOpportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Year Expected Revenue Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>