force-app/main/default/objects/Campaign/fields/ThisYearExpectedRevenueWONOpty__c.field-meta.xml
<CustomField>
    <fullName>ThisYearExpectedRevenueWONOpty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Year Expected Revenue WON Opty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>