force-app/main/default/objects/Campaign/recordTypes/Dummy_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Dummy_Campaign</fullName>
    <active>true</active>
    <label>Dummy Campaign</label>
</RecordType>