force-app/main/default/objects/Campaign/recordTypes/Exclusive_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Campaign</fullName>
    <active>true</active>
    <description>Exclusive campaign in child level</description>
    <label>Exclusive Campaign</label>
</RecordType>