force-app/main/default/objects/Campaign/recordTypes/Exclusive_Campaign_Active.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Campaign_Active</fullName>
    <active>true</active>
    <label>Exclusive Campaign (Active)</label>
</RecordType>