force-app/main/default/objects/Campaign/recordTypes/Exclusive_Campaign_Expired.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Campaign_Expired</fullName>
    <active>true</active>
    <label>Exclusive Campaign (Expired)</label>
</RecordType>