force-app/main/default/objects/Campaign/recordTypes/Local_Exclusive_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Local_Exclusive_Campaign</fullName>
    <active>true</active>
    <description>Local Campaign in child level</description>
    <label>Local Exclusive Campaign</label>
</RecordType>