force-app/main/default/objects/Campaign/recordTypes/Local_Exclusive_Campaign_Active.recordType-meta.xml
<RecordType>
    <fullName>Local_Exclusive_Campaign_Active</fullName>
    <active>true</active>
    <label>Local Exclusive Campaign (Active)</label>
</RecordType>