force-app/main/default/objects/Campaign/recordTypes/Local_Exclusive_Campaign_Expired.recordType-meta.xml
<RecordType>
    <fullName>Local_Exclusive_Campaign_Expired</fullName>
    <active>true</active>
    <label>Local Exclusive Campaign (Expired)</label>
</RecordType>