force-app/main/default/objects/Campaign/recordTypes/Mass_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Mass_Campaign</fullName>
    <active>true</active>
    <description>Mass campaign in child level</description>
    <label>Mass Campaign</label>
</RecordType>