force-app/main/default/objects/Campaign/recordTypes/Mass_Campaign_Active.recordType-meta.xml
<RecordType>
    <fullName>Mass_Campaign_Active</fullName>
    <active>true</active>
    <label>Mass Campaign (Active)</label>
</RecordType>