force-app/main/default/objects/Campaign/recordTypes/Mass_Campaign_Expired.recordType-meta.xml
<RecordType>
    <fullName>Mass_Campaign_Expired</fullName>
    <active>true</active>
    <label>Mass Campaign (Expired)</label>
</RecordType>